# telml

./: README.md  cabal.project  telml.cabal
.github/workflows/: haskell-ci.yml
Data/: TeLML.hs
Data/TeLML/: New.hs  Parser.hs  Type.hs
src/: Main.hs
telml/: telml.cabal
telml-bin/: README.md  telml-bin.cabal
telml-bin/Data/TeLML/: Driver.hs
telml-bin/src/: Main.hs
telml-bin/test/: TelmlBinTests.hs
telml-markup/: LICENSE  README.md  telml-markup.cabal
telml-markup/Data/TeLML/: Markup.hs
telml-markup/telml2html/: Main.hs
telml-markup/test/Telml/: MarkupSpec.hs
telml-parse/: telml-parse.cabal
telml-parse/Data/TeLML/: Parse.hs
telml/Data/: TeLML.hs
telml/Data/TeLML/: Parser.hs  Type.hs
telml/test/: BasicTests.hs
