name:                telml
version:             0.1.0.0
synopsis:            foo
description:         foo
license:             BSD3
license-file:        LICENSE
author:              Getty Ritter
maintainer:          gdritter@galois.com
copyright:           ©2015
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.TeLML
  other-modules:       Data.TeLML.Parser
  build-depends:       base >=4.7 && <4.8, text, attoparsec
  default-language:    Haskell2010

executable from-telml
  main-is:            Main.hs
  hs-source-dirs:     src
  build-depends:      base >=4.7 && <4.8, aeson, telml, vector, text, bytestring
  default-language:   Haskell2010
