name:                telml
version:             0.1.0.0
synopsis:            A lightweight TeX-like markup format.
description:         A lightweight TeX-like markup format.
license:             BSD3
license-file:        LICENSE
author:              Getty Ritter
maintainer:          gdritter@galois.com
copyright:           ©2015 Getty Ritter
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.TeLML
  other-modules:       Data.TeLML.Parser, Data.TeLML.Type
  build-depends:       base >=4.7 && <4.9,
                       deepseq >=1.4 && <2
  default-language:    Haskell2010
