name: telml-bin
version: 0.1.0.0
synopsis: The command-line `telml` driver
description: A command-line tool for compiling `telml`
             documents.
license: BSD3
license-file: LICENSE
author: Getty Ritter <telml@infinitenegativeutility.com>
maintainer: Getty Ritter <telml@infinitenegativeutility.com>
copyright: @2023 Getty Ritter
category: Data
build-type: Simple
cabal-version: 1.14
tested-with:            GHC == 8.8.4, GHC == 8.10.7, GHC == 9.0.2, GHC == 9.2.4, GHC == 9.4.2

library
  exposed-modules: Data.TeLML.Driver
  ghc-options: -Wall
  build-depends: base >=4.7 && <5
               , bytestring
               , telml
               , telml-markup
               , text
               , hslua-core
  default-language: Haskell2010

executable telml
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010
  default-extensions: ScopedTypeVariables
  ghc-options: -Wall
  build-depends: base >=4.7 && <5
               , telml-bin

test-suite telml-bin-tests
  type: exitcode-stdio-1.0
  main-is: TelmlBinTests.hs
  default-language: Haskell2010
  build-depends: base
               , hspec
               , telml-bin
               , bytestring
               , text
  hs-source-dirs: test
