name:                   telml-markup
version:                0.1.0.0
author:                 Getty Ritter <gettylefou@gmail.com>
maintainer:             Getty Ritter <gettylefou@gmail.com>
license:                BSD3
license-file:           LICENSE
-- Synopsis:               
-- Description:            
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md

library
  default-language:     Haskell2010
  ghc-options:          -Wall
  exposed-modules:      Data.TeLML.Markup
  build-depends:        base >= 4 && < 5,
                        telml,
                        blaze-markup,
                        blaze-html,
                        mtl

test-suite spec
  type:            exitcode-stdio-1.0
  ghc-options:     -Wall
  hs-source-dirs:  test
  main-is:         Spec.hs
  build-depends:     base    == 4.*
                   , telml
                   , telml-markup
                   , hspec   == 2.*
                   , blaze-markup

source-repository head
  type:     git
  location: https://github.com/aisamanra/telml-markup
