name:                   telml-markup
version:                0.1.0.0
author:                 Getty Ritter <gettylefou@gmail.com>
maintainer:             Getty Ritter <gettylefou@gmail.com>
copyright:              ©2015 Getty Ritter
category:               Data
license:                BSD3
license-file:           LICENSE
synopsis:               A simple, extensible, TeX-like markup language.
description:            A simple, extensible, TeX-like markup language.
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md

library
  default-language:     Haskell2010
  ghc-options:          -Wall
  exposed-modules:      Data.TeLML.Markup
  build-depends:        base >= 4 && < 5,
                        telml,
                        blaze-markup,
                        blaze-html,
                        mtl,
                        text

test-suite spec
  default-language: Haskell2010
  type:            exitcode-stdio-1.0
  ghc-options:     -Wall
  hs-source-dirs:  test
  main-is:         Spec.hs
  other-modules:   Telml.MarkupSpec
  build-depends:     base    == 4.*
                   , telml
                   , telml-markup
                   , hspec   == 2.*
                   , blaze-markup
  build-tools: hspec-discover

source-repository head
  type:     git
  location: https://github.com/aisamanra/telml
