name:                telml-parse
version:             0.1.0.0
synopsis:            A lightweight TeX-like markup format.
description:         A lightweight TeX-like markup format.
license:             BSD3
license-file:        LICENSE
author:              Getty Ritter <gettylefou@gmail.com>
maintainer:          Getty Ritter <gettylefou@gmail.com>
copyright:           ©2018 Getty Ritter
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.TeLML.Parse
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <5,
                       telml ==0.1.0.0,
                       text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aisamanra/telml
