name:                telml-parse
version:             0.1.0.0
synopsis:            A processing abstraction for `telml`.
description:         An abstraction for interpreting and
                     processing `telml` documents.
license:             BSD3
license-file:        LICENSE
author:              Getty Ritter <telml@infinitenegativeutility.com>
maintainer:          Getty Ritter <telml@infinitenegativeutility.com>
copyright:           ©2023 Getty Ritter
category:            Data
build-type:          Simple
cabal-version:       1.14
tested-with:         GHC == 8.8.4, GHC == 8.10.7, GHC == 9.0.2, GHC == 9.2.4, GHC == 9.4.2

library
  exposed-modules:     Data.TeLML.Parse
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <5,
                       telml ==0.1.0.0,
                       text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aisamanra/telml
