name: telml
version: 0.1.0.0
synopsis: A lightweight TeX-like markup format.
description: A lightweight TeX-like markup format,
  including a barebones parser for the document format.
license: BSD3
license-file: LICENSE
author: Getty Ritter <telml@infinitenegativeutility.com>
maintainer: Getty Ritter <telml@infinitenegativeutility.com>
copyright: ©2023 Getty Ritter
category: Data
build-type: Simple
cabal-version: 1.14
tested-with: GHC == 8.8.4, GHC == 8.10.7, GHC == 9.0.2, GHC == 9.2.4, GHC == 9.4.2

library
  exposed-modules: Data.TeLML
  ghc-options: -Wall
  other-modules: Data.TeLML.Parser, Data.TeLML.Type
  build-depends: base >=4.7 && <5,
                 deepseq >=1.4 && <2,
                 text
  default-language: Haskell2010

test-suite basic-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: BasicTests.hs
  build-depends: base,
                 hspec,
                 telml

source-repository head
  type: git
  location: https://github.com/aisamanra/telml
